--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/node": "20.14.12",
+    "@types/node": "^24.3.0",
     "typescript": "5.5.4"
   }
 }
